Closed Bug 72815 Opened 25 years ago Closed 25 years ago

incorrect gtk api check in nsRenderingContextGTK.h for gcc 3.0

Categories

(Core :: XUL, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla0.9.3

People

(Reporter: cls, Assigned: bryner)

Details

Attachments

(2 files)

Apparently, GTK changed their gdk_gc_set_dashes api in 1.2.6 not 1.2.7 . My gcc-3.0 build died on that this morning.
Attached patch s/7/6/Splinter Review
And here's where RH loses points. The pristine 1.2.6 source doesn't have the change but the rpm released with RH6.2 does. :(
Summary: incorrect gtk api check in nsRenderingContextGTK.h → incorrect gtk api check in nsRenderingContextGTK.h for gcc 3.0
r=dr
Keywords: mozilla0.9
"fun"
Assignee: pavlov → bryner
0.9.1, unless someone wants to contribute a working autoconf check for this Real Soon.
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.9.1
Target Milestone: mozilla0.9.1 → mozilla0.9.3
I like it. r=bryner.
Patch has been checked in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: