Use XSetDashes instead of gdk_gc_set_dashes as the latter's api changed between gtk 1.2.6 & 1.2.7. Thanks to Stuart Parmenter <pavlov@netscape.com> for the patch. Bug #72815 r=bryner