gfx/src/gtk/nsRenderingContextGTK.h
@@ -248,14 +248,8 @@ private:
   GdkGC                 *mGC;
   GdkFunction            mFunction;
   GdkLineStyle           mLineStyle;
- // gtk+ 1.2.7 introduces an incompatible API change
-#if (GTK_MAJOR_VERSION > 1) || ((GTK_MAJOR_VERSION == 1) && ((GTK_MINOR_VERSION > 2) || \
-    ((GTK_MINOR_VERSION == 2) && (GTK_MICRO_VERSION >= 7))))
-  gint8                  mDashList[2];
-#else
-  gchar                  mDashList[2];
-#endif
-  gint                   mDashes;
+  char                   mDashList[2];
+  int                    mDashes;
   nscolor                mCurrentColor;
   nsFontGTK             *mCurrentFont;
   nsLineStyle            mCurrentLineStyle;
